Feature: dag_template_task_architecture_pattern
- Implemented a DAG to demonstrate a task architecture pattern using Taskflow API.
- Added ETL tasks with @task_group for extract, transform, and load steps.
- Incorporated @setup and @teardown for initialization and finalization processes.
- Modularized task logic by importing functions from the 'tasks' module.
- Provided comprehensive documentation for the DAG and tasks, detailing the architecture pattern.
- Updated .gitignore to allow specific directories and files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-# Ignore files
+# Ignore all files
 *
 
 # Allow specific files and directories
 !.gitignore
 !*.py
-!dags/
 !requirements.txt
 !packages.txt
 !Dockerfile
+!dags/
+!dags/dag_template_task_architecture_pattern/
+!dags/dag_template_task_architecture_pattern/tasks/
+!dags/dag_template_task_architecture_pattern/configs/
+!dags/dag_template_task_architecture_pattern/configs/config.yaml
 
 # Ignore specific files
 exampledag.py
