--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 !dags/dag_template_task_architecture_pattern/tasks/
 !dags/dag_template_task_architecture_pattern/configs/
 !dags/dag_template_task_architecture_pattern/configs/config.yaml
+!dags/dag_sensor/
+!dags/dag_sensor/tasks/
+
 
 # Ignore specific files
 exampledag.py
